HTML и начала стилизации

--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -1,25 +1,26 @@
 <header class="header">
-  <body>
-    <header class="header">
+  <div class="header-wrapper main-container">
+    <a href="#">
       <picture>
-        <source media="(max-width: 767px)" srcset="/img/logo_1x.webp 1x, img/logo_1x.webp 2x">
-        <source media="(max-width: 1200px)" srcset="/img/logo_1x_2x.webp 1x, /img/logo_1x_2x.webp 2x">
-        <img class="" src="/img/logo_1x.png" srcset="/img/logo_1x_2x.webp 2x" width="89.5" height="63" alt="Окна в дом">
+        <source media="(max-width: 767px)" srcset="/img/logo_1x.webp  1x,  img/logo_1x.webp 2x">
+        <source media="(max-width: 1200px)" srcset="/img/logo_1x_2  webp  1x, /img/logo_1x_2x.webp 2x">
+        <img class="" src="/img/logo_1x.png" srcset="/img/logo_1x_2x  webp   2x" width="89.5" height="63"
+          alt="Окна в дом">
       </picture>
-      <nav>
-  <ul>
-    <li><a href="">Услуги</a></li>
-    <li><a href="">Продукция</a></li>
-    <li><a href="">О компании</a></li>
-    <li><a href="">Портфолио</a></li>
-    <li><a href="">Вопрос-ответ</a></li>
-    <li><a href="">Контакты</a></li>
-  </ul>
-  <div>
-    <button>Заявка на замер</button>
-    <button>Заказать расчет</button>
+    </a>
+    <nav class="maim__nav">
+      <ul>
+        <li><a class="main-nav__link main-nav__link--active">Услуги</a></li>
+        <li><a class="main-nav__link" href="#">Продукция</a></li>
+        <li><a class="main-nav__link" href="#">О компании</a></li>
+        <li><a class="main-nav__link" href="#">Портфолио</a></li>
+        <li><a class="main-nav__link" href="#">Вопрос-ответ</a></li>
+        <li><a class="main-nav__link" href="#">Контакты</a></li>
+      </ul>
+      <div>
+        <a class="btn btn--application btn--orange" href="#">Заявка на замер</a>
+        <a class="btn btn--order btn--purple" href="#">Заказать расчет</a>
+      </div>
+    </nav>
   </div>
-  </nav>
-  </header>
-  
 </header>
