--- a/src/components/page-blocks/_footer.html
+++ b/src/components/page-blocks/_footer.html
@@ -1,1 +1,12 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <div class="main-container">
+    <div>
+      <a class="" href="#"><img src="/img/Logo_svg.svg" width="54" height="39" alt="mini logo"><span>© ООО “Окна Хаус”,
+          2011 - 2022</span></a>
+    </div>
+    <div>
+      <a href="#">Политика кофиденциальности</a>
+      <a href="#">Пользовательское соглашение</a>
+    </div>
+  </div>
+</footer>
