--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -1,55 +1,96 @@
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+}
+
+.elenent-non {
+  display: none;
+}
+
+body {
+  min-width: 1920px;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  ;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: normal;
+  color: #000000;
+  background: #F2F2F2;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+}
+
+.main-container {
+  width: 1200px;
+  margin: 0 auto;
+  padding-right: 0;
+  padding-left: 0;
+}
+
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .flex {
-	display: flex;
-	align-items: flex-start;
-	justify-content: flex-start;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
 
 .--just-space {
-	justify-content: space-between;
+  justify-content: space-between;
 }
 
 .--just-center {
-	justify-content: center;
+  justify-content: center;
 }
 
 .--just-end {
-	justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .--align-str {
-	align-items: stretch;
+  align-items: stretch;
 }
 
 .--align-center {
-	align-items: center;
+  align-items: center;
 }
 
 .--align-end {
-	align-items: flex-end;
+  align-items: flex-end;
 }
 
 .--dir-col {
-	flex-direction: column;
-}
-
-html {
-	font-size: 16px;
+  flex-direction: column;
 }
 
 html,
 body {
-	min-height: 100%;
-	position: relative;
-}
-
-body {
-	font-size: 1rem;
+  min-height: 100%;
+  position: relative;
 }
 
 ul,
@@ -62,5 +103,27 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0;
+  margin: 0;
+}
+
+.title--big{
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 42px;
+}
+
+.title--middle {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+}
+
+.text--orange {
+  color: #EF7F04
+}
+
+.text--white {
+  color: #FFFFFF;
 }
