CSS стили база 60%

--- a/src/components/page-blocks/_about-us.html
+++ b/src/components/page-blocks/_about-us.html
@@ -1,12 +1,11 @@
 <sectioun class="about-us">
-  
-  @@include('_about-us-article.html')
+  @@include('../bem-blocks/_about-us-article.html')
   <div class="our-features">
     <h3>Профессионализм</h3>
     <p>
       Бригада профессиональных
       мастеров по монтажу
-      и обслуживанию
+      и обслуживани.
     </p>
   </div>
   <div class="our-features">
