--- a/src/components/page-blocks/_main-service.html
+++ b/src/components/page-blocks/_main-service.html
@@ -1,22 +1,13 @@
-<section class="main-service">
-  <h2 class="title-middle">Наши услуги</h2>
-  <div>
-    <h3 class="title-middle">Установка
-      пластиковых
+<section class="main-service text--purple">
+  <h2 class="main__service--title title-middle">Наши услуги</h2>
+  <div class="service__block">
+    <h3 class="title-middle">Установкапластиковых
       окон</h3>
     <p class="service-text">Устанавливаем пластиковые окна Rehau
-      от проверенного производителя
-      с
+      от проверенного производителяс
       гарантией качества</p>
   </div>
-  <div>
-    <h3 class="title-middle">Остекление балконов
-      и лоджий
-    </h3>
-    <p class="service-text">Занимаемся остеклением и отделкой
-      балконов и лоджий. Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты</p>
-  </div>
-  <div>
+  <div class="service__block">
     <h3 class="title-middle">Остекление
       коттеджей и дач</h3>
     <p class="service-text">Остекление и отделка под ключ:
@@ -24,7 +15,14 @@
       и беседок. Выделяем личного
       технолога под каждый объект</p>
   </div>
-  <div>
+  <div class="service__block">
+    <h3 class="title-middle">Остекление балконов
+      и лоджий
+    </h3>
+    <p class="service-text">Занимаемся остеклением и отделкой
+      балконов и лоджий. Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты</p>
+  </div>
+  <div class="service__block">
     <h3 class="title-middle">Остекление
       корпоративных объектов
     </h3>
