--- a/src/scss/global/_fonts.scss
+++ b/src/scss/global/_fonts.scss
@@ -1,3 +1,4 @@
 @include font-face("Roboto", "Roboto-Bold", 700, bold);
-@include font-face("Roboto", "Roboto-Regular", 400, normal);
 @include font-face("Roboto", "Roboto-Medium", 500, medium);
+@include font-face("Roboto", "Roboto-Regular", 400, normal);
+@include font-face("Roboto", "Roboto-Thin", 100, thin);
