--- a/src/components/bem-blocks/_about-us-article.html
+++ b/src/components/bem-blocks/_about-us-article.html
@@ -1,12 +1,12 @@
-<article class="about-us-slider">
-  <h2>О компании</h2>
+<article class="about-us__slider">
+  <h2 class="title--middle text--purple">О компании</h2>
   <ul>
-    <li> <a href="#">Описание</a></li>
-    <li> <a href="#">Как мы работаем</a></li>
-    <li> <a href="#">Отзывы</a></li>
-    <li> <a href="#">Сертификаты</a></li>
+    <li><a class="about-us__link" href="#">Описание</a></li>
+    <li><a class="about-us__link" href="#">Как мы работаем</a></li>
+    <li><a class="about-us__link" href="#">Отзывы</a></li>
+    <li><a class="about-us__link" href="#">Сертификаты</a></li>
   </ul>
-  <div>
+  <div class="about-us__block">
     <a href="#">
       <img src="/img/Big_logo.svg" width="198" height="140" alt="Big logo">
     </a>
@@ -14,7 +14,7 @@
       объект, которым Вы будете пользоваться много лет, поэтому для нас очень важно, чтобы Вы сделали правильный выбор
     </p>
   </div>
-  <div>
+  <div class="about-us__block">
     <picture>
       <source media="(max-width: 767px)" srcset="/img/window_man_1x.webp 1x,  /img/window_man_2x.webp 2x">
       <source media="(max-width: 1200px)" srcset="/img/window_man_1x.webp 1x,/img/window_man_1x.webp 2x">
