--- a/src/components/page-blocks/_about-us.html
+++ b/src/components/page-blocks/_about-us.html
@@ -1,47 +1,47 @@
 <sectioun class="about-us">
   @@include('../bem-blocks/_about-us-article.html')
   <div class="our-features">
-    <h3>Профессионализм</h3>
-    <p>
+    <h3 class="title--small text--purple" >Профессионализм</h3>
+    <p class="our-feauters__text" >
       Бригада профессиональных
       мастеров по монтажу
       и обслуживани.
     </p>
   </div>
   <div class="our-features">
-    <h3>Ценообразование</h3>
-    <p>
+    <h3 class="title--small text--purple" >Ценообразование</h3>
+    <p class="our-feauters__text" >
       Лучшие цены на рынке
       пластиковых окон
     </p>
   </div>
   <div class="our-features">
-    <h3>Мобильность</h3>
-    <p>
+    <h3 class="title--small text--purple" >Мобильность</h3>
+    <p class="our-feauters__text" >
       Заключение договора
       на дому
     </p>
   </div>
   <div class="our-features">
-    <h3>Лояльность</h3>
-    <p>
+    <h3 class="title--small text--purple" >Лояльность</h3>
+    <p class="our-feauters__text" >
       99% клиентов рекомендуют
       нас своим друзьям
     </p>
   </div>
   <div class="our-features">
-    <h3>Скорость</h3>
-    <p>
+    <h3 class="title--small text--purple" >Скорость</h3>
+    <p class="our-feauters__text" >
       Короткие сроки
       установки изделий
     </p>
   </div>
   <div class="our-features">
-    <h3>Служба качества</h3>
-    <p>
+    <h3 class="title--small text--purple" >Служба качества</h3>
+    <p class="our-feauters__text" >
       Безупречное качество
       и контроль изделий ПВХ
     </p>
-    <a href="#">Оформить заявку на замер</a>
+    <a class="bth_arrange btn btn--orange " href="#">Оформить заявку на замер</a>
   </div>
 </sectioun>
