--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -106,7 +106,7 @@ h6 {
   margin: 0;
 }
 
-.title--big{
+.title--big {
   font-style: normal;
   font-weight: 100;
   font-size: 36px;
@@ -118,6 +118,13 @@ h6 {
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
+}
+
+.title--small {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  text-transform: uppercase;
 }
 
 .text--orange {
