--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -140,10 +140,9 @@ h6 {
 }
 
 .btn {
-  display: table-cell;
+  display: block;
   color: #ffffff;
   text-align: center;
-  vertical-align: middle;
   font-size: 13px;
   font-weight: normal;
   line-height: 15px;
