--- a/src/components/page-blocks/_header.html
+++ b/src/components/page-blocks/_header.html
@@ -8,16 +8,16 @@
           alt="Окна в дом">
       </picture>
     </a>
-    <nav class="maim__nav">
-      <ul>
-        <li><a class="main-nav__link main-nav__link--active">Услуги</a></li>
-        <li><a class="main-nav__link" href="#">Продукция</a></li>
-        <li><a class="main-nav__link" href="#">О компании</a></li>
-        <li><a class="main-nav__link" href="#">Портфолио</a></li>
-        <li><a class="main-nav__link" href="#">Вопрос-ответ</a></li>
-        <li><a class="main-nav__link" href="#">Контакты</a></li>
+    <nav class="maim-nav">
+      <ul class="main-nav__list" >
+        <li class="main-nav__item"><a class="main-nav__link main-nav__link--active">Услуги</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Продукция</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">О компании</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Портфолио</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Вопрос-ответ</a></li>
+        <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
       </ul>
-      <div>
+      <div class="main-nav__bottom" >
         <a class="btn btn--application btn--orange" href="#">Заявка на замер</a>
         <a class="btn btn--order btn--purple" href="#">Заказать расчет</a>
       </div>
