стилизация CSS сетки и псевдоелементы

--- a/src/components/page-blocks/_main-promo.html
+++ b/src/components/page-blocks/_main-promo.html
@@ -1,27 +1,31 @@
 <section class="main-promo">
-    <span class="main-promo__name title--middle text--orange">Окна Хаус -</span>
-    <h1 class="main-promo__title title--big text--white ">Профессиональный подход к остеклению</h1>
-    <div class="main-promo__wrapper">
-        <div class="main-promo__features features--one">
-            <p class="main-promo__text text--white">
-                Современные окна
-                и балконные конструкции
-                по доступным ценам
-            </p>
+    <div class="main-wrapper main-container">
+        <div class="main-slogan__wrapper">
+            <span class="main-promo__name title--middle text--orange">Окна Хаус -</span>
+            <h1 class="main-promo__title title--big text--white ">Профессиональный подход к остеклению</h1>
         </div>
-        <div class="main-promo__features features--two">
-            <p class="main-promo__text text--white">
-                Квалифицированный
-                подход к решению задач
-                любой сложности
-            </p>
-        </div>
-        <div class="main-promo__features features--three">
-            <p class="main-promo__text text--white">
-                Гарантия
-                высочайшего качества
-                нашей продукции
-            </p>
+        <div class="main-promo__wrapper">
+            <div class="main-promo__features">
+                <p class="main-promo__text text--white">
+                    Современные окна
+                    и балконные конструкции
+                    по доступным ценам
+                </p>
+            </div>
+            <div class="main-promo__features">
+                <p class="main-promo__text text--white">
+                    Квалифицированный
+                    подход к решению задач
+                    любой сложности
+                </p>
+            </div>
+            <div class="main-promo__features">
+                <p class="main-promo__text text--white">
+                    Гарантия
+                    высочайшего качества
+                    нашей продукции
+                </p>
+            </div>
         </div>
         @@include('../bem-blocks/_main-form.html')
     </div>
