--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -148,6 +148,7 @@ h6 {
   line-height: 15px;
   border: 0;
   border-radius: 3px;
+  outline:0;
 }
 
 .btn:active {
@@ -160,12 +161,23 @@ h6 {
 
 .btn--orange:hover {
   background-color: #ff7b00;
+  box-shadow: 0px 0px 10px #EF7F04;
+}
+
+.btn--orange:focus {
+  box-shadow: 0px 0px 10px #EF7F04;
 }
 
 .btn--purple {
   background-color: #3B3A63;
+  
 }
 
 .btn--purple:hover {
   background-color: #474493;
+  box-shadow: 0px 0px 10px #3B3A63;
+}
+
+.btn--purple:focus {
+  box-shadow: 0px 0px 10px #3B3A63;
 }
