стилизация CSS сетки и ховеры

--- a/src/components/bem-blocks/_about-us-article.html
+++ b/src/components/bem-blocks/_about-us-article.html
@@ -1,6 +1,6 @@
 <article class="about-us__slider">
-  <h2 class="title--middle text--purple">О компании</h2>
-  <ul>
+  <h2 class="about-us__title title--middle text--purple">О компании</h2>
+  <ul class="about-us__list" >
     <li><a class="about-us__link" href="#">Описание</a></li>
     <li><a class="about-us__link" href="#">Как мы работаем</a></li>
     <li><a class="about-us__link" href="#">Отзывы</a></li>
