--- a/src/components/page-blocks/_main-service.html
+++ b/src/components/page-blocks/_main-service.html
@@ -1,34 +1,44 @@
 <section class="main-service text--purple">
   <h2 class="main__service--title title-middle">Наши услуги</h2>
-  <div class="service__block">
-    <h3 class="title-middle">Установкапластиковых
-      окон</h3>
-    <p class="service-text">Устанавливаем пластиковые окна Rehau
-      от проверенного производителяс
-      гарантией качества</p>
-  </div>
-  <div class="service__block">
-    <h3 class="title-middle">Остекление
-      коттеджей и дач</h3>
-    <p class="service-text">Остекление и отделка под ключ:
-      от коттеджей и дач до террас
-      и беседок. Выделяем личного
-      технолога под каждый объект</p>
-  </div>
-  <div class="service__block">
-    <h3 class="title-middle">Остекление балконов
-      и лоджий
-    </h3>
-    <p class="service-text">Занимаемся остеклением и отделкой
-      балконов и лоджий. Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты</p>
-  </div>
-  <div class="service__block">
-    <h3 class="title-middle">Остекление
-      корпоративных объектов
-    </h3>
-    <p class="service-text">Реализуем сложные проекты
-      по остеклению торговых центров,
-      ресторанов, производственных помещений
-      и офисов</p>
+  <div class="service__block--wrapper">
+    <a class="servise__block-link text--purple" href="#">
+      <div class="service__block">
+        <h3 class="service-title__inner title--middle">Установка пластиковых
+          окон</h3>
+        <p class="service-text">Устанавливаем пластиковые окна Rehau
+          от проверенного производителяс
+          гарантией качества</p>
+      </div>
+    </a>
+    <a class="servise__block-link text--purple" href="#">
+      <div class="service__block">
+        <h3 class="service-title__inner title--middle">Остекление балконов
+          и лоджий
+        </h3>
+        <p class="service-text">Занимаемся остеклением и отделкой
+          балконов и лоджий. Теплое и холодное остекление, изготовление выносов и крыш. Беремся за сложные объекты</p>
+      </div>
+    </a>
+    <a class="servise__block-link text--purple" href="#">
+      <div class="service__block">
+        <h3 class="service-title__inner title--middle">Остекление
+          коттеджей и дач</h3>
+        <p class="service-text">Остекление и отделка под ключ:
+          от коттеджей и дач до террас
+          и беседок. Выделяем личного
+          технолога под каждый объект</p>
+      </div>
+    </a>
+    <a class="servise__block-link text--purple" href="#">
+      <div class="service__block">
+        <h3 class="service-title__inner title--middle">Остекление
+          корпоративных объектов
+        </h3>
+        <p class="service-text">Реализуем сложные проекты
+          по остеклению торговых центров,
+          ресторанов, производственных помещений
+          и офисов</p>
+      </div>
+    </a>
   </div>
 </section>
