about us сетки на гридах pp

--- a/src/components/page-blocks/_about-us.html
+++ b/src/components/page-blocks/_about-us.html
@@ -1,47 +1,50 @@
 <sectioun class="about-us">
   @@include('../bem-blocks/_about-us-article.html')
-  <div class="our-features">
-    <h3 class="title--small text--purple" >Профессионализм</h3>
-    <p class="our-feauters__text" >
-      Бригада профессиональных
-      мастеров по монтажу
-      и обслуживани.
-    </p>
+  <div class="about-us__wrapper">
+    <div class="our-features">
+      <h3 class="title--small text--purple">Профессионализм</h3>
+      <p class="our-feauters__text">
+        Бригада профессиональных
+        мастеров по монтажу
+        и обслуживани.
+      </p>
+    </div>
+    <div class="our-features">
+      <h3 class="title--small text--purple">Ценообразование</h3>
+      <p class="our-feauters__text">
+        Лучшие цены на рынке
+        пластиковых окон
+      </p>
+    </div>
+    <div class="our-features">
+      <h3 class="title--small text--purple">Мобильность</h3>
+      <p class="our-feauters__text">
+        Заключение договора
+        на дому
+      </p>
+    </div>
+    <div class="our-features">
+      <h3 class="title--small text--purple">Лояльность</h3>
+      <p class="our-feauters__text">
+        99% клиентов рекомендуют
+        нас своим друзьям
+      </p>
+    </div>
+    <div class="our-features">
+      <h3 class="title--small text--purple">Скорость</h3>
+      <p class="our-feauters__text">
+        Короткие сроки
+        установки изделий
+      </p>
+    </div>
+    <div class="our-features">
+      <h3 class="title--small text--purple">Служба качества</h3>
+      <p class="our-feauters__text">
+        Безупречное качество
+        и контроль изделий ПВХ
+      </p>
+    </div>
   </div>
-  <div class="our-features">
-    <h3 class="title--small text--purple" >Ценообразование</h3>
-    <p class="our-feauters__text" >
-      Лучшие цены на рынке
-      пластиковых окон
-    </p>
-  </div>
-  <div class="our-features">
-    <h3 class="title--small text--purple" >Мобильность</h3>
-    <p class="our-feauters__text" >
-      Заключение договора
-      на дому
-    </p>
-  </div>
-  <div class="our-features">
-    <h3 class="title--small text--purple" >Лояльность</h3>
-    <p class="our-feauters__text" >
-      99% клиентов рекомендуют
-      нас своим друзьям
-    </p>
-  </div>
-  <div class="our-features">
-    <h3 class="title--small text--purple" >Скорость</h3>
-    <p class="our-feauters__text" >
-      Короткие сроки
-      установки изделий
-    </p>
-  </div>
-  <div class="our-features">
-    <h3 class="title--small text--purple" >Служба качества</h3>
-    <p class="our-feauters__text" >
-      Безупречное качество
-      и контроль изделий ПВХ
-    </p>
-    <a class="bth_arrange btn btn--orange " href="#">Оформить заявку на замер</a>
-  </div>
+  <a class="bth_arrange btn--orange text--white" href="#">Оформить заявку на замер</a>
+
 </sectioun>
