--- a/src/scss/block/_about-us.scss
+++ b/src/scss/block/_about-us.scss
@@ -1,3 +1,11 @@
+.about-us__wrapper {
+  display: grid;
+  grid-template-columns: 400px 400px 400px;
+  grid-template-rows: 150px 150px;
+  gap: 20px;
+  margin: 55px 0px 70px 0px;
+}
+
 .our-features {
   width: 400px;
 }
@@ -33,10 +41,18 @@
 }
 
 .bth_arrange {
+  display: block;
   width: 312px;
   height: 55px;
+  margin-left: 443px;
+  padding: 17px 32px 18px 72px;
+  text-align: center;
+  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 19px;
-  background: url(/img/svg/svg_icon_8.svg) no-repeat 20px 10px;
+  background: url(/img/svg/svg_icon_8.svg) no-repeat 28px 18px;
+  border: 0;
+  border-radius: 3px;
+  outline:0;
 }
