--- a/src/scss/block/_about-us.scss
+++ b/src/scss/block/_about-us.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 400px 400px 400px;
   grid-template-rows: 150px 150px;
   gap: 20px;
-  margin: 55px 0px 70px 0px;
+  margin: 57px 0px 70px 0px;
 }
 
 .our-features {
@@ -11,36 +11,43 @@
 }
 
 .our-feauters__text {
-  font-weight: 400;
+  margin-top: 11px;
+  font-weight: 700;
   font-size: 16px;
-  line-height: 36px;
+  line-height: 26px;
 }
 
 .our-features:nth-of-type(1) {
-  background: url(/img/svg/svg_icon_professional.svg) no-repeat 0 0;
+  padding: 8px 0px 0px 151px;
+  background: url(/img/svg/svg_icon_professional.svg) no-repeat 41px 11px;
 }
 
 .our-features:nth-of-type(2) {
-  background: url(/img/svg/svg_icon_5.svg) no-repeat 0 0;
+  padding: 7px 0px 0px 136px;
+  background: url(/img/svg/svg_icon_sale.svg) no-repeat 4px 9px;
 }
 
 .our-features:nth-of-type(3) {
-  background: url(/img/svg/svg_icon_quality_service.svg) no-repeat 0 0;
+  padding: 6px 90px 0px 122px;
+  background: url(/img/svg/svg_icon_contract.svg) no-repeat 12px 11px;
 }
 
 .our-features:nth-of-type(4) {
-  background: url(/img/svg/svg_icon_loyalty.svg) no-repeat 0 0;
+  padding: 51px 14px 0px 152px;
+  background: url(/img/svg/svg_icon_loyalty.svg) no-repeat 40px 57px;
 }
 
 .our-features:nth-of-type(5) {
-  background: url(/img/svg/svg_icon_speed.svg) no-repeat 0 0;
+  padding: 50px 73px 0px 136px;
+  background: url(/img/svg/svg_icon_speed.svg) no-repeat 25px 54px;
 }
 
 .our-features:nth-of-type(6) {
-  background: url(/img/svg/svg_icon_quality_service.svg) no-repeat 0 0;
+  padding: 51px 91px 0px 123px;
+  background: url(/img/svg/svg_icon_quality_service.svg) no-repeat 11px 49px;
 }
 
-.bth_arrange {
+ .bth_arrange {
   display: block;
   width: 312px;
   height: 55px;
@@ -55,4 +62,8 @@
   border: 0;
   border-radius: 3px;
   outline:0;
+}
+
+.bth_arrange:active {
+  transform: translate(0, -1px);
 }
