--- a/src/components/page-blocks/_faq-block.html
+++ b/src/components/page-blocks/_faq-block.html
@@ -1,33 +1,33 @@
 <section class="faq-block">
-  <h3 class="title--middle text--white">Вопрос-ответ</h3>
+  <h3 class="faq-block__title title--middle text--white">Вопрос-ответ</h3>
   <ul class="faq-list text--purple">
     <li class="faq-list_item" >Сколько по времени занимает изготовление пластиковых окон?
-      <ul class="faq-list_item-popup">
+      <ul class="faq-list_item-popup elenent-non">
         <li>Сколько по времени занимает изготовление пластиковых окон?</li>
       </ul>
     </li>
     <li class="faq-list_item" >Какие существуют способы оплаты?
-      <ul class="faq-list_item-popup">
+      <ul class="faq-list_item-popup elenent-non">
         <li>Пы принимаем любую форму оплаты</li>
       </ul>
     </li>
     <li class="faq-list_item" >Где я могу посмотреть образцы?
-      <ul class="faq-list_item-popup">
+      <ul class="faq-list_item-popup elenent-non">
         <li>В любом отделение нашего офиса или при вызове замерщика на дом</li>
       </ul>
     </li>
     <li class="faq-list_item" >Зачем вызывать замерщика? Я могу дать размеры
-      <ul class="faq-list_item-popup">
+      <ul class="faq-list_item-popup elenent-non">
         <li>Нет проблем если вы не боитись сквозняков))</li>
       </ul>
     </li>
     <li class="faq-list_item" >Мне надо нанимать грузчиков для подъема?
-      <ul class="faq-list_item-popup">
+      <ul class="faq-list_item-popup elenent-non">
         <li>Нет, команда мастеров все сами аккуратно доставят и внесут.</li>
       </ul>
     </li>
     <li class="faq-list_item" >Хотелось бы отделать балкон. Поможете?
-      <ul class="faq-list_item-popup">
+      <ul class="faq-list_item-popup elenent-show">
         <li>Конечно сделаем что угодно если это окна</li>
       </ul>
     </li>
