--- a/src/scss/block/_about-us-article.scss
+++ b/src/scss/block/_about-us-article.scss
@@ -42,6 +42,7 @@
   display: grid;
   grid-template-columns: 605px 596px;
   margin-top: 35px;
+  background: #FFFFFF;
 }
 .about-us__block {
   width: 600px;
