--- a/src/components/page-blocks/_footer.html
+++ b/src/components/page-blocks/_footer.html
@@ -1,12 +1,13 @@
 <footer class="footer">
-  <div class="main-container">
-    <div>
-      <a class="text--white" href="#"><img src="/img/Logo_svg.svg" width="54" height="39" alt="mini logo"><span>© ООО “Окна Хаус”,
-          2011 - 2022</span></a>
+  <div class="footer__wrapper main-container">
+    <div class="branded__block">
+      <a class="text--white" href="#"><img src="/img/Logo_svg.svg" width="54" height="39" alt="mini logo"></a>
+      <span>© ООО “Окна Хаус”,
+        2011 - 2022</span>
     </div>
-    <div>
-      <a class="text--white"  href="#">Политика кофиденциальности</a>
-      <a class="text--white"  href="#">Пользовательское соглашение</a>
+    <div class="info__block">
+      <a class="info__block--link text--white" href="#">Политика кофиденциальности</a>
+      <a class="info__block--link text--white" href="#">Пользовательское соглашение</a>
     </div>
   </div>
 </footer>
