--- a/src/scss/block/_faq-block.scss
+++ b/src/scss/block/_faq-block.scss
@@ -9,32 +9,67 @@
   margin: 0px 0px 48px 421px;
 }
 
+// .faq-list {
+//   padding: 0;
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 18px;
+//   line-height: 21px;
+
+// }
+
+// .faq-list_item {
+//   background: #FFFFFF;
+//   border-radius: 7px;
+//   padding: 34px 0px 27px 18px;
+//   margin-bottom: 16px;
+// }
+
+// .faq-list_item:hover,
+// .faq-list__item:focus,
+// .faq-list__item:active {
+//   color: #EF7F04;
+// }
+
+// .faq-list_item-popup {
+//   padding: 17px 0px 0px 0px;
+//   font-weight: 400;
+//   font-size: 16px;
+//   line-height: 19px;
+//   color: #000000;
+// }
+
+
+
 .faq-list {
-  padding: 0;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 21px;
-
-}
-
-.faq-list_item {
+  outline-style: none;
   background: #FFFFFF;
   border-radius: 7px;
-  padding: 34px 0px 27px 18px;
-  margin-bottom: 16px;
+  padding: 36px 0px 27px 18px;
+  margin-bottom: 12px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  color: #000000;
 }
 
-.faq-list_item:hover,
-.faq-list__item:focus,
-.faq-list__item:active {
+.faq-list__inner {
+  padding: auto;
+  list-style: none;
+}
+
+.faq-list__inner:hover,
+.faq-list__inner:active {
   color: #EF7F04;
 }
 
-.faq-list_item-popup {
-  padding: 17px 0px 0px 0px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
-  color: #000000;
+.faq-list--text {
+ font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.faq-text {
+  padding-top: 28px;
 }
