--- a/src/scss/block/_portfolio.scss
+++ b/src/scss/block/_portfolio.scss
@@ -1,5 +1,11 @@
+
+.portfolio {
+  background-color: #FFFFFF;
+}
+
 .portfolio__title{
-  margin: 136px 0px 48px 531px;
+  margin: 87px 0px 48px 531px;
+  padding-top: 48px;
 }
 
 .portfolio__image--wrapper {
@@ -12,5 +18,4 @@
 
 .portfolio__image {
 border-radius: 3px;
-
 }
