--- a/src/components/bem-blocks/_about-us-article.html
+++ b/src/components/bem-blocks/_about-us-article.html
@@ -7,21 +7,18 @@
     <li><a class="about-us__link" href="#">Сертификаты</a></li>
   </ul>
   <div class="about-us__block-wrapper">
-    <div class="about-us__block">
-      <a class="about-us__link"  href="#">
-        <img src="/img/Big_logo.svg" width="198" height="140" alt="Big logo">
-      </a>
-      <p class="about-us__text" >Мы помогаем клиентам подбирать решения, учитывая пожежелания к характеристикам окна и его стоимости. Окно - это
-        объект, которым Вы будете пользоваться много лет, поэтому для нас очень важно, чтобы Вы сделали правильный выбор
-      </p>
-    </div>
-    <div class="about-us__block">
-      <picture>
-        <source media="(max-width: 767px)" srcset="/img/window_man_1x.webp 1x,  /img/window_man_2x.webp 2x">
-        <source media="(max-width: 1200px)" srcset="/img/window_man_1x.webp 1x,/img/window_man_1x.webp 2x">
-        <img class="" src="/img/window_man_1x.webp" srcset="/img/window_man_2x.webp 2x" width="595" height="461"
-          alt="Мастер устанавливает окно">
-      </picture>
-    </div>
+    <a class="about-us__logo-link" href="#">
+      <img src="/img/Big_logo.svg" width="198" height="140" alt="Big logo">
+    </a>
+    <p class="about-us__text">Мы помогаем клиентам подбирать решения, учитывая пожежелания к характеристикам окна и его
+      стоимости. Окно - это
+      объект, которым Вы будете пользоваться много лет, поэтому для нас очень важно, чтобы Вы сделали правильный выбор
+    </p>
+    <picture class="about-us__block">
+      <source media="(max-width: 767px)" srcset="/img/window_man_1x.webp 1x,  /img/window_man_2x.webp 2x">
+      <source media="(max-width: 1200px)" srcset="/img/window_man_1x.webp 1x,/img/window_man_1x.webp 2x">
+      <img class="" src="/img/window_man_1x.webp" srcset="/img/window_man_2x.webp 2x" width="595" height="461"
+        alt="Мастер устанавливает окно">
+    </picture>
   </div>
 </article>
