--- a/src/scss/block/_about-us-article.scss
+++ b/src/scss/block/_about-us-article.scss
@@ -1,19 +1,18 @@
-
 .about-us__title {
   margin: 67px 0px 40px 531px;
 }
 
 .about-us__list {
   display: flex;
-  justify-content:flex-start;
+  justify-content: flex-start;
   align-items: center;
   gap: 10px;
   margin-left: 250px;
-  padding: 0;  
+  padding: 0;
 }
 
 .about-us__link {
-  margin: 45px 0px 0px 50px;
+  margin: 0px 0px 0px 50px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -36,25 +35,26 @@
   background-color: #EF7F04;
   border: 0;
   border-radius: 3px;
-  outline:0;
+  outline: 0;
 }
+
+.about-us__logo-link {
+  margin: 45px 0px 0px 50px;
+  outline: 0;
+}
+
 .about-us__block-wrapper {
   display: grid;
-  grid-template-columns: 605px 596px;
+  grid-template-columns: 248px 357px 596px;
   margin-top: 35px;
   background: #FFFFFF;
 }
+
 .about-us__block {
   width: 600px;
-}
-
-.about-us__block:nth-child(1) {
-  display: grid;
-  grid-template-columns: 248px 357px ;
 }
 
 .about-us__text {
   margin: 248px 56px 0px 0px;
   line-height: 22px;
 }
-
