--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -24,7 +24,6 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
-  ;
   font-size: 16px;
   line-height: 19px;
   font-weight: normal;
@@ -34,6 +33,7 @@ body {
 
 a {
   text-decoration: none;
+  outline-color: #EF7F04;
 }
 
 ul {
