--- a/src/components/page-blocks/_portfolio.html
+++ b/src/components/page-blocks/_portfolio.html
@@ -1,29 +1,37 @@
 <section class="portfolio">
   <h2 class="portfolio__title title--middle text--purple">Портфолио</h2>
-  <div class="portfolio__image--wrapper" >
+  <div class="portfolio__image--wrapper">
     <picture>
-      <source class="portfolio__image" media="(max-width: 767px)" srcset="/img/Rectangle_4_1x.webp  1x,  /img/Rectangle_4_2x.webp 2x">
-      <source class="portfolio__image" media="(max-width: 1200px)" srcset="/img/Rectangle_4_1x.webp  1x,  /img/Rectangle_4_2x.webp 2x">
-      <img class="portfolio__image" src="/img/Rectangle_4_1x.webp" srcset="/img/Rectangle_4_1x.webp 2x" width="214" height="214"
-        alt="Примеры работ">
+      <source class="portfolio__image" media="(max-width: 767px)"
+        srcset="/img/Rectangle_4_1x.webp  1x,  /img/Rectangle_4_2x.webp 2x">
+      <source class="portfolio__image" media="(max-width: 1200px)"
+        srcset="/img/Rectangle_4_1x.webp  1x,  /img/Rectangle_4_2x.webp 2x">
+      <img class="portfolio__image" src="/img/Rectangle_4_1x.webp" srcset="/img/Rectangle_4_1x.webp 2x" width="214"
+        height="214" alt="Примеры работ">
     </picture>
     <picture>
-      <source class="portfolio__image" media="(max-width: 767px)" srcset="/img/Rectangle_3_1x.webp  1x,  /img/Rectangle_3_2x.webp 2x">
-      <source class="portfolio__image" media="(max-width: 1200px)" srcset="/img/Rectangle_3_1x.webp  1x,  /img/Rectangle_3_2x.webp 2x">
-      <img class="portfolio__image" src="/img/Rectangle_3_1x.webp" srcset="/img/Rectangle_3_1x.webp 2x" width="214" height="214"
-        alt="Примеры работ">
+      <source class="portfolio__image" media="(max-width: 767px)"
+        srcset="/img/Rectangle_3_1x.webp  1x,  /img/Rectangle_3_2x.webp 2x">
+      <source class="portfolio__image" media="(max-width: 1200px)"
+        srcset="/img/Rectangle_3_1x.webp  1x,  /img/Rectangle_3_2x.webp 2x">
+      <img class="portfolio__image" src="/img/Rectangle_3_1x.webp" srcset="/img/Rectangle_3_1x.webp 2x" width="214"
+        height="214" alt="Примеры работ">
     </picture>
     <picture>
-      <source class="portfolio__image" media="(max-width: 767px)" srcset="/img/Rectangle_2_1x.webp  1x,  /img/Rectangle_2_2x.webp 2x">
-      <source class="portfolio__image" media="(max-width: 1200px)" srcset="/img/Rectangle_2_1x.webp  1x,  /img/Rectangle_2_2x.webp 2x">
-      <img class="portfolio__image" src="/img/Rectangle_2_1x.webp" srcset="/img/Rectangle_2_1x.webp 2x" width="214" height="214"
-        alt="Примеры работ">
+      <source class="portfolio__image" media="(max-width: 767px)"
+        srcset="/img/Rectangle_2_1x.webp  1x,  /img/Rectangle_2_2x.webp 2x">
+      <source class="portfolio__image" media="(max-width: 1200px)"
+        srcset="/img/Rectangle_2_1x.webp  1x,  /img/Rectangle_2_2x.webp 2x">
+      <img class="portfolio__image" src="/img/Rectangle_2_1x.webp" srcset="/img/Rectangle_2_1x.webp 2x" width="214"
+        height="214" alt="Примеры работ">
     </picture>
     <picture>
-      <source class="portfolio__image" media="(max-width: 767px)" srcset="/img/Rectangle_1_1x.webp  1x,  /img/Rectangle_1_2x.webp 2x">
-      <source class="portfolio__image" media="(max-width: 1200px)" srcset="/img/Rectangle_1_1x.webp  1x,  /img/Rectangle_1_2x.webp 2x">
-      <img class="portfolio__image" src="/img/Rectangle_1_1x.webp" srcset="/img/Rectangle_1_1x.webp 2x" width="214" height="214"
-        alt="Примеры работ">
+      <source class="portfolio__image" media="(max-width: 767px)"
+        srcset="/img/Rectangle_1_1x.webp  1x,  /img/Rectangle_1_2x.webp 2x">
+      <source class="portfolio__image" media="(max-width: 1200px)"
+        srcset="/img/Rectangle_1_1x.webp  1x,  /img/Rectangle_1_2x.webp 2x">
+      <img class="portfolio__image" src="/img/Rectangle_1_1x.webp" srcset="/img/Rectangle_1_1x.webp 2x" width="214"
+        height="214" alt="Примеры работ">
     </picture>
 
 
