--- a/src/components/page-blocks/_faq-block.html
+++ b/src/components/page-blocks/_faq-block.html
@@ -3,7 +3,7 @@
   <details class="faq-list"><summary class="faq-list__inner  faq-list--text">Сколько по времени занимает изготовление пластиковых окон?</summary><p class="faq-text">До 10 дней</p></details>
   <details class="faq-list"><summary class="faq-list__inner faq-list--text">Какие существуют способы оплаты?</summary><p class="faq-text">Обычно мы берем золотом и драгоценными камнями, но рубли и биткойнты тоже прокатят</p></details>
   <details class="faq-list"><summary class="faq-list__inner faq-list--text">Где я могу посмотреть образцы?</summary><p class="faq-text">Обросцы можно посмотреть в любом нашем салоне или при вызове замерщика</p></details>
-  <details class="faq-list"><summary class="faq-list__inner faq-list--text">Зачем вызывать замерщика? Я могу дать размеры</summary><p class="faq-text">Без продлем но потом мы не отвечаем за сквозняки и трещины на стёклах</p></details>
+  <details class="faq-list"><summary class="faq-list__inner faq-list--text">Зачем вызывать замерщика? Я могу дать размеры</summary><p class="faq-text">Без проблем но потом мы не отвечаем за сквозняки и трещины на стёклах</p></details>
   <details class="faq-list"><summary class="faq-list__inner faq-list--text">Хотелось бы отделать балкон. Поможете?</summary><p class="faq-text">Конешно у нас множество различных вариантов исполнения</p></details>
   <details class="faq-list" open><summary class="faq-list__inner faq-list--text">Мне надо нанимать грузчиков для подъема?</summary><p class="faq-text"> Нет, команда мастеров все сами аккуратно доставят и внесут.</p></details>
 </section>
