--- a/src/scss/block/_about-us-article.scss
+++ b/src/scss/block/_about-us-article.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  flex-wrap: wrap;
   gap: 10px;
   margin-left: 250px;
   padding: 0;
